# src/woo_search/search_index/api/viewsets.py
@@ -44,6 +44,7 @@ class DocumentViewSet(viewsets.ViewSet):
             informatie_categorieen=validated_data["informatie_categorieen"],
             onderwerpen=validated_data["onderwerpen"],
             publisher=validated_data["publisher"],
+            identifiers=validated_data["identifiers"],
             identifier=validated_data["identifier"],
             officiele_titel=validated_data["officiele_titel"],
             verkorte_titel=validated_data["verkorte_titel"],
@@ -95,6 +96,7 @@ class PublicationViewSet(viewsets.ViewSet):
             publisher=validated_data["publisher"],
             informatie_categorieen=validated_data["informatie_categorieen"],
             onderwerpen=validated_data["onderwerpen"],
+            identifiers=validated_data["identifiers"],
             officiele_titel=validated_data["officiele_titel"],
             verkorte_titel=validated_data["verkorte_titel"],
             omschrijving=validated_data["omschrijving"],
